--- a/espacoEstudo.html
+++ b/espacoEstudo.html
@@ -46,6 +46,11 @@
 					<header>
 						<h2 style="color:#987F42;">Grupo de Estudos <br /></h2><br /><br />
 					</header>
+					<object width="1024" height="768">
+						<param name="movie" value="http://www.youtube.com/v/ZkdPA5MvnU8" />
+						<embed src="http://www.youtube.com/v/ZkdPA5MvnU8" type="application/x-shockwave-flash"
+							width="1024" height="768" />
+					</object>
 					<h4>
 						Em 2020 faremos grupos de estudos de Freud a Lacan de sexta-feira das 14h às 15:30h a partir de
 						março.<br />
