--- a/index.html
+++ b/index.html
@@ -2,174 +2,157 @@
 <html>
 
 <head>
-	<title>UNBEWUSSTE - Home</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+    <title>UNBEWUSSTE - Home</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/cabecalho.css" />
 </head>
 
 <body class="is-preload">
 
-	<div id="wrapper">
+    <div id="wrapper">
 
-		<div id="main">
-			<div class="inner">
+        <div id="main">
+            <div class="inner">
 
-				<header id="header">
-					<div>
-						<img src="images/UNBEWUSSTE.png"
-							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
-							style="margin-left: 2%">
-						<img src="images/audio2.png"
-							style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;"
-							onclick="document.getElementById('player').play()">
-						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
-						<img src="images/ELEMENTO_.png"
-							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
-						<img src="images/FABIANA RATTI PSICANALISTA.png"
-							style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
-					</div>
-				</header>
-				<ul class="icons" style="float: right;">
-					<li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
+                <header id="header">
+                    <div>
+                        <img src="images/UNBEWUSSTE.png" class="cabecalho-unbewusste">
+                        <img src="images/audio2.png" class="cabecalho-audio" onclick="document.getElementById('player').play()">
+                        <audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
+                        <img src="images/ELEMENTO_.png" class="cabecalho-elemento">
+                        <img src="images/FABIANA RATTI PSICANALISTA.png" class="cabecalho-fabiana">
+
+                    </div>
+                </header>
+                <ul class="icons" style="float: right;">
+                    <li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
 								class="label">Facebook</span></a>
-					</li>
-					<li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br"
-							class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-					</li>
-				</ul>
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h3 style="color:#987F42;">UNBEWUSSTE<br />
-								EXCELÊNCIA EM SAUDE MENTAL</h3>
-						</header>
-						<b>UNBEWUSSTE</b> – é uma clínica que oferece atendimento psicanalítico lacaniano. Para tal,
-						formamos Redes de encaminhamentos, psicanalistas especializados para atender. A missão da
-						clínica UNBEWUSSTE é deixar a psicanálise e conceitos psicanalíticos acessíveis a um maior
-						número possível de pessoas:<br />
-						- Atendimento psicanalítico individual <br />
-						- Atendimento casal e família <br />
-						- Redes de atendimento clínico por endereços de São Paulo <br />
-						- grupos de estudos<br />
-						- aulas online<br />
-						- intervenções e debates em escolas<br />
-						- Supervisão clínica <br />
-						<p id="texto1" style="display: none;">
-							- Supervisão institucional <br />
-							- Debates clínicos <br />
-							- Debates e palestras <br />
-							- Desenvolvimento de projetos e montagens de empresas <br />
-							- Divulgação de conteúdo e conceitos dos psicanalistas Sigmund Freud (1856-1939) e
-							Jacques Lacan (1901-1981).
-						</p>
-						<ul class="actions">
-							<li><a class="button" id="botao1">Mais</a></li>
-						</ul>
-					</div>
-					<span class="image object">
+                    </li>
+                    <li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+                    </li>
+                </ul>
+                <section id="banner">
+                    <div class="content">
+                        <header>
+                            <h3 style="color:#987F42;">UNBEWUSSTE<br /> EXCELÊNCIA EM SAUDE MENTAL</h3>
+                        </header>
+                        <b>UNBEWUSSTE</b> – é uma clínica que oferece atendimento psicanalítico lacaniano. Para tal, formamos Redes de encaminhamentos, psicanalistas especializados para atender. A missão da clínica UNBEWUSSTE é deixar a psicanálise e
+                        conceitos psicanalíticos acessíveis a um maior número possível de pessoas:<br /> - Atendimento psicanalítico individual <br /> - Atendimento casal e família <br /> - Redes de atendimento clínico por endereços de São Paulo <br />                        - grupos de estudos<br /> - aulas online<br /> - intervenções e debates em escolas<br /> - Supervisão clínica <br />
+                        <p id="texto1" style="display: none;">
+                            - Supervisão institucional <br /> - Debates clínicos <br /> - Debates e palestras <br /> - Desenvolvimento de projetos e montagens de empresas <br /> - Divulgação de conteúdo e conceitos dos psicanalistas Sigmund Freud (1856-1939)
+                            e Jacques Lacan (1901-1981).
+                        </p>
+                        <ul class="actions">
+                            <li><a class="button" id="botao1">Mais</a></li>
+                        </ul>
+                    </div>
+                    <span class="image object">
 						<img src="images/index1.png" alt="" />
 						<a href="images/index1.png">acessar</a>mais
 					</span>
-				</section>
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h3 style="color:#987F42;">REDE DE ATENDIMENTO <br />
-								PSICANALÍTICO UNBEWUSSTE</h3>
-						</header>
-						<p>
-							A primeira Rede de atendimento Unbewusste oferece atendimento psicanalítico individual
-							semanal, é direcionada para pessoas que têm empresas, que trabalham em empresas ou querem
-							montar sua empresa.
-							Outras Redes serão montadas de acordo com a procura. Atendemos crianças, adolescentes,
-							adultos, terceira idade. À medida que esta procura for excedendo, vamos aumentando o número
-							de Redes UNBEWUSSTE borromeana.
+                </section>
+                <section id="banner">
+                    <div class="content">
+                        <header>
+                            <h3 style="color:#987F42;">REDE DE ATENDIMENTO <br /> PSICANALÍTICO UNBEWUSSTE</h3>
+                        </header>
+                        <p>
+                            A primeira Rede de atendimento Unbewusste oferece atendimento psicanalítico individual semanal, é direcionada para pessoas que têm empresas, que trabalham em empresas ou querem montar sua empresa. Outras Redes serão montadas de acordo com a procura. Atendemos
+                            crianças, adolescentes, adultos, terceira idade. À medida que esta procura for excedendo, vamos aumentando o número de Redes UNBEWUSSTE borromeana.
 
-						</p>
-					</div>
-					<span class="image object">
+                        </p>
+                    </div>
+                    <span class="image object">
 						<img src="images/index2.png" alt="" />
 					</span>
-				</section>
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h3 style="color:#987F42;">Além de atendimento clínico, <br />
-								a Rede Unbewusste pode: </h3>
-						</header>
-						<p>
-							Contribuir com aulas, debates, discussões e palestras.
-							Deixar a psicanálise francesa de Jacques Lacan mais
-							acessível à sociedade. Trabalhar para que cada sujeito
-							deixe os “narcisismos das pequenas diferenças.” (Freud)
-							e invista em projetos comuns de forma singular.
+                </section>
+                <section id="banner">
+                    <div class="content">
+                        <header>
+                            <h3 style="color:#987F42;">Além de atendimento clínico, <br /> a Rede Unbewusste pode: </h3>
+                        </header>
+                        <p>
+                            Contribuir com aulas, debates, discussões e palestras. Deixar a psicanálise francesa de Jacques Lacan mais acessível à sociedade. Trabalhar para que cada sujeito deixe os “narcisismos das pequenas diferenças.” (Freud) e invista em projetos comuns de forma
+                            singular.
 
-						</p>
-					</div>
-					<span class="image object">
+                        </p>
+                    </div>
+                    <span class="image object">
 						<img src="images/index3.png" alt="" />
 					</span>
-				</section>
-			</div>
-		</div>
+                </section>
+                <section>
+                    <div>
+                        <header>
+                            <h3 style="color:#987F42;">Por que fazer análise? O Inconsciente - Fabiana Ratti, psicanalista</h3>
+                        </header>
+                        <object width="1024" height="768">
+							<param name="movie" value="http://www.youtube.com/v/uynh-G3xFig" />
+							<embed src="http://www.youtube.com/v/uynh-G3xFig" type="application/x-shockwave-flash"
+								width="1024" height="768" />
+						</object>
+                    </div>
+                </section>
+            </div>
+        </div>
 
-		<div id="sidebar">
-			<div class="inner">
+        <div id="sidebar">
+            <div class="inner">
 
-				<!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="quemSomos.html">Quem Somos</a></li>
-						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
-						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
-						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
-						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
-						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
-						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
-						<li><a href="painelCultural.html">Painel Cultural</a></li>
-						<li><a href="biblioteca.html">Biblioteca</a></li>
-						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
-						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
-						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
-					</ul>
-				</nav>
+                <!-- Menu -->
+                <nav id="menu">
+                    <header class="major">
+                        <h2>Menu</h2>
+                    </header>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="quemSomos.html">Quem Somos</a></li>
+                        <li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
+                        <li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
+                        <li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+                        <li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
+                        <li><a href="espacoEstudo.html">Espaço de estudo</a></li>
+                        <li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
+                        <li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
+                        <li><a href="painelCultural.html">Painel Cultural</a></li>
+                        <li><a href="biblioteca.html">Biblioteca</a></li>
+                        <li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
+                        <li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
+                        <li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+                    </ul>
+                </nav>
 
-				<section>
-					<header class="major">
-						<h2>Contato</h2>
-					</header>
-					<ul class="contact">
-						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
-							<li class="icon solid fa-phone">(11) 99955-8857</li>
-							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 -
-								Pinheiros<br />
-								São Paulo, CEP: 05414-012</li>
-						</ul>
-					</ul>
-				</section>
+                <section>
+                    <header class="major">
+                        <h2>Contato</h2>
+                    </header>
+                    <ul class="contact">
+                        <ul class="contact">
+                            <li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
+                            <li class="icon solid fa-phone">(11) 99955-8857</li>
+                            <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros
+                                <br /> São Paulo, CEP: 05414-012</li>
+                        </ul>
+                    </ul>
+                </section>
 
-				<footer id="footer">
-					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
-				</footer>
+                <footer id="footer">
+                    <p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
+                </footer>
 
-			</div>
-		</div>
+            </div>
+        </div>
 
-	</div>
+    </div>
 
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/Paginas/index.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/Paginas/index.js"></script>
 </body>
 
 </html>
