--- a/psicanalistaParceiro.html
+++ b/psicanalistaParceiro.html
@@ -2,138 +2,120 @@
 <html>
 
 <head>
-	<title>UNBEWUSSTE - Psicanalista parceiro</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+    <title>UNBEWUSSTE - Psicanalista parceiro</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/cabecalho.css" />
 </head>
 
 <body class="is-preload">
 
-	<div id="wrapper">
+    <div id="wrapper">
 
-		<div id="main">
-			<div class="inner">
+        <div id="main">
+            <div class="inner">
 
 
-				<header id="header">
-					<div>
-						<img src="images/UNBEWUSSTE.png"
-							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
-							style="margin-left: 2%">
-						<img src="images/audio2.png"
-							style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;"
-							onclick="document.getElementById('player').play()">
-						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
-						<img src="images/ELEMENTO_.png"
-							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
-						<img src="images/FABIANA RATTI PSICANALISTA.png"
-							style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
-					</div>
-				</header>
-				<ul class="icons" style="float: right;">
-					<li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
+                <header id="header">
+                    <div>
+                        <img src="images/UNBEWUSSTE.png" class="cabecalho-unbewusste">
+                        <img src="images/audio2.png" class="cabecalho-audio" onclick="document.getElementById('player').play()">
+                        <audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
+                        <img src="images/ELEMENTO_.png" class="cabecalho-elemento">
+                        <img src="images/FABIANA RATTI PSICANALISTA.png" class="cabecalho-fabiana">
+                    </div>
+                </header>
+                <ul class="icons" style="float: right;">
+                    <li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
 								class="label">Facebook</span></a>
-					</li>
-					<li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br"
-							class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-					</li>
-				</ul>
+                    </li>
+                    <li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+                    </li>
+                </ul>
 
-				<section>
-					<header class="main">
-						<h1>Psicanalista parceiro</h1>
-					</header>
-					<header>
-						<h3 style="color:#987F42;">Rede de atendimento para psicanalistas<br /></h3><br /><br />
-					</header>
-					<p>
-						UNBEWUSSTE é uma clínica de psicanálise onde teremos o entrecruzamento borromeano de Redes de
-						atendimento psicanalítico. Como psicanalista, nesses 20 anos de formada fui atendendo pessoas
-						que foram me encaminhando pacientes, analisantes, o boca a boca foi acontecendo... Mas os
-						horários vão encavalando, não consigo atender a todos, então decidimos formalizar esses
-						encaminhamentos e assim eu supervisiono psicanalistas, eles atendem na mesma qualidade e
-						dedicação que eu. A primeira Rede que estamos montando é a de empresários e pessoas que
-						trabalham em empresa. Tudo é discutido na posição de sujeito, na singularidade de cada um, no
-						estilo e universo da pessoa.<br /><br />
-						Os psicanalistas que quiserem trabalhar com esse público, que estão dispostos a estudar, a
-						discutir casos clínicos, a fazer supervisão, entrem em contato. <br /><br />
-						Algumas pessoas desse público são expatriadas, estrangeiros que estão trabalhando em empresas no
-						BR por um período. Dessa forma, também precisamos de psicanalistas que atendam em outra
-						língua... francês, inglês, espanhol... temos dificuldade de encaminhar quando a pessoa gostaria
-						de falar em outro idioma. <br /><br />
-						Outras Redes serão montadas de acordo com a procura. Atendemos crianças, adolescentes, adultos,
-						terceira idade. À medida que esta procura for excedendo, vamos aumentando o número de Redes
-						UNBEWUSSTE borromeana.
+                <section>
+                    <header class="main">\
+                        <h1>Psicanalista parceiro</h1>
+                    </header>
+                    <object width="1024" height="768">
+						<param name="movie" value="http://www.youtube.com/v/4t1K3CxyACw&t" />
+						<embed src="http://www.youtube.com/v/4t1K3CxyACw&t" type="application/x-shockwave-flash"
+							width="1024" height="768" />
+					</object>
+                    <header>
+                        <h3 style="color:#987F42;">Rede de atendimento para psicanalistas<br /></h3><br /><br />
+                    </header>
+                    <p>
+                        UNBEWUSSTE é uma clínica de psicanálise onde teremos o entrecruzamento borromeano de Redes de atendimento psicanalítico. Como psicanalista, nesses 20 anos de formada fui atendendo pessoas que foram me encaminhando pacientes, analisantes, o boca a boca
+                        foi acontecendo... Mas os horários vão encavalando, não consigo atender a todos, então decidimos formalizar esses encaminhamentos e assim eu supervisiono psicanalistas, eles atendem na mesma qualidade e dedicação que eu. A primeira
+                        Rede que estamos montando é a de empresários e pessoas que trabalham em empresa. Tudo é discutido na posição de sujeito, na singularidade de cada um, no estilo e universo da pessoa.<br /><br /> Os psicanalistas
+                        que quiserem trabalhar com esse público, que estão dispostos a estudar, a discutir casos clínicos, a fazer supervisão, entrem em contato. <br /><br /> Algumas pessoas desse público são expatriadas, estrangeiros que estão trabalhando
+                        em empresas no BR por um período. Dessa forma, também precisamos de psicanalistas que atendam em outra língua... francês, inglês, espanhol... temos dificuldade de encaminhar quando a pessoa gostaria de falar em outro idioma. <br
+                        /><br /> Outras Redes serão montadas de acordo com a procura. Atendemos crianças, adolescentes, adultos, terceira idade. À medida que esta procura for excedendo, vamos aumentando o número de Redes UNBEWUSSTE borromeana. Envie seu
+                        CV se você quer ser um psicanalista da Ubewusste Cada profissional fica no seu consultório e recebe pacientes/analisantes fazendo supervisão e grupo de estudos na Ubewusste. <br /><br /> Todos os CVs serão lidos, mas somente serão
+                        chamados para uma entrevista de acordo com a necessidade da Ubewusste. <br /><br /> Caso queiram participam podem aparecer no grupo de estudos que acontece.... Agradecemos o contato, o envio do CV e esperamos que possamos trabalhar
+                        futuramente juntos.
+                        <br /><br />
 
-						Envie seu CV se você quer ser um psicanalista da Ubewusste
-						Cada profissional fica no seu consultório e recebe pacientes/analisantes fazendo supervisão e
-						grupo de estudos na Ubewusste. <br /><br />
-						Todos os CVs serão lidos, mas somente serão chamados para uma entrevista de acordo com a
-						necessidade da Ubewusste. <br /><br />
-						Caso queiram participam podem aparecer no grupo de estudos que acontece....
-						Agradecemos o contato, o envio do CV e esperamos que possamos trabalhar futuramente juntos.
-						<br /><br />
+                    </p>
+                    <hr class="major" />
+            </div>
+        </div>
 
-					</p>
-					<hr class="major" />
-			</div>
-		</div>
+        <div id="sidebar">
+            <div class="inner">
 
-		<div id="sidebar">
-			<div class="inner">
+                <nav id="menu">
+                    <header class="major">
+                        <h2>Menu</h2>
+                    </header>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="quemSomos.html">Quem Somos</a></li>
+                        <li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
+                        <li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
+                        <li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+                        <li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
+                        <li><a href="espacoEstudo.html">Espaço de estudo</a></li>
+                        <li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
+                        <li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
+                        <li><a href="painelCultural.html">Painel Cultural</a></li>
+                        <li><a href="biblioteca.html">Biblioteca</a></li>
+                        <li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
+                        <li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
+                        <li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+                    </ul>
+                </nav>
 
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="quemSomos.html">Quem Somos</a></li>
-						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
-						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
-						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
-						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
-						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
-						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
-						<li><a href="painelCultural.html">Painel Cultural</a></li>
-						<li><a href="biblioteca.html">Biblioteca</a></li>
-						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
-						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
-						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
-					</ul>
-				</nav>
+                <section>
+                    <header class="major">
+                        <h2>Contato</h2>
+                    </header>
+                    <ul class="contact">
+                        <ul class="contact">
+                            <li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
+                            <li class="icon solid fa-phone">(11) 99955-8857</li>
+                            <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros
+                                <br /> São Paulo, CEP: 05414-012</li>
+                        </ul>
+                    </ul>
+                </section>
 
-				<section>
-					<header class="major">
-						<h2>Contato</h2>
-					</header>
-					<ul class="contact">
-						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
-							<li class="icon solid fa-phone">(11) 99955-8857</li>
-							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 -
-								Pinheiros<br />
-								São Paulo, CEP: 05414-012</li>
-						</ul>
-					</ul>
-				</section>
+                <footer id="footer">
+                    <p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
+                </footer>
 
-				<footer id="footer">
-					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
-				</footer>
+            </div>
+        </div>
 
-			</div>
-		</div>
+    </div>
 
-	</div>
-
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
