--- a/biblioteca.html
+++ b/biblioteca.html
@@ -2,190 +2,179 @@
 <html>
 
 <head>
-	<title>UNBEWUSSTE - Quem Somos</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+    <title>UNBEWUSSTE - Quem Somos</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/cabecalho.css" />
 </head>
 
 <body class="is-preload">
 
-	<div id="wrapper">
+    <div id="wrapper">
 
-		<div id="main">
-			<div class="inner">
+        <div id="main">
+            <div class="inner">
 
 
-				<header id="header">
-					<div>
-						<img src="images/UNBEWUSSTE.png"
-							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
-							style="margin-left: 2%">
-						<img src="images/audio2.png"
-							style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;"
-							onclick="document.getElementById('player').play()">
-						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
-						<img src="images/ELEMENTO_.png"
-							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
-						<img src="images/FABIANA RATTI PSICANALISTA.png"
-							style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
-					</div>
-				</header>
-				<ul class="icons" style="float: right;">
-					<li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
+                <header id="header">
+                    <div>
+                        <img src="images/UNBEWUSSTE.png" class="cabecalho-unbewusste">
+                        <img src="images/audio2.png" class="cabecalho-audio" onclick="document.getElementById('player').play()">
+                        <audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
+                        <img src="images/ELEMENTO_.png" class="cabecalho-elemento">
+                        <img src="images/FABIANA RATTI PSICANALISTA.png" class="cabecalho-fabiana">
+                    </div>
+                </header>
+                <ul class="icons" style="float: right;">
+                    <li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
 								class="label">Facebook</span></a>
-					</li>
-					<li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br"
-							class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-					</li>
-				</ul>
+                    </li>
+                    <li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+                    </li>
+                </ul>
 
-				<section>
-					<header class="main">
-						<h1>Biblioteca</h1>
-					</header>
+                <section>
+                    <header class="main">
+                        <h1>Biblioteca</h1>
+                    </header>
 
-					<span class="image main"><img src="images/livros.png" alt="" /></span>
+                    <span class="image main"><img src="images/livros.png" alt="" /></span>
 
-					<header>
-						<h2 style="color:#987F42;">Links:<br /></h2><br /><br />
-					</header>
+                    <header>
+                        <h2 style="color:#987F42;">Links:<br /></h2><br /><br />
+                    </header>
 
-					<h3>DAS ENTREVISTAS PRELIMINARES AO ENGASTE DA TRANSFERÊNCIA.</h3>
-					<small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
-					<a href="https://revistas.pucsp.br/apeste/article/view/22080">Acesse aqui</a>
+                    <h3>DAS ENTREVISTAS PRELIMINARES AO ENGASTE DA TRANSFERÊNCIA.</h3>
+                    <small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
+                    <a href="https://revistas.pucsp.br/apeste/article/view/22080">Acesse aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Instituição e ato psicanalítico em sua extimidade.</h3>
-					<small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
-					<a href="http://www.opcaolacaniana.com.br/nranterior/numero18/texto9.html">Acesse aqui</a>
+                    <h3>Instituição e ato psicanalítico em sua extimidade.</h3>
+                    <small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
+                    <a href="http://www.opcaolacaniana.com.br/nranterior/numero18/texto9.html">Acesse aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>A letra chinesa e a clínica lacaniana</h3>
-					<small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
-					<a href="http://pepsic.bvsalud.org/scielo.php?script=sci_arttext&pid=S2359-07692014000300004">Link
+                    <h3>A letra chinesa e a clínica lacaniana</h3>
+                    <small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
+                    <a href="http://pepsic.bvsalud.org/scielo.php?script=sci_arttext&pid=S2359-07692014000300004">Link
 						1</a><br />
-					<a href="https://periodicos.unifor.br/rmes/article/view/4477">Link 2</a><br />
-					<a
-						href="https://livrariadopsicanalista.com.br/a-peste---rev-de-psicanalise-e-soc-e-filosofia--psicanalise-e-saude-publica">Link
+                    <a href="https://periodicos.unifor.br/rmes/article/view/4477">Link 2</a><br />
+                    <a href="https://livrariadopsicanalista.com.br/a-peste---rev-de-psicanalise-e-soc-e-filosofia--psicanalise-e-saude-publica">Link
 						3</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>VIOLENCE, ACCIDENT, AND TRAUMA — THE PSYCHOANALYTIC CLINIC FACED WITH THE REAL OF URGENCY AND
-						EMERGENCY.</h3>
-					<small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
-					<a href="http://www.scielo.br/pdf/agora/v19n3/en_1809-4414-agora-19-03-00605.pdf">Acesse aqui</a>
+                    <h3>VIOLENCE, ACCIDENT, AND TRAUMA — THE PSYCHOANALYTIC CLINIC FACED WITH THE REAL OF URGENCY AND EMERGENCY.
+                    </h3>
+                    <small>Fabiana Ratti, Ivan Ramos Estevão</small><br />
+                    <a href="http://www.scielo.br/pdf/agora/v19n3/en_1809-4414-agora-19-03-00605.pdf">Acesse aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Modos de gozo na dor de existir: um estudo psicanalítico sobre A falecida de Nelson Rodrigues.
-					</h3>
-					<a href="http://bdtd.ibict.br/vufind/Record/PUC_SP-1_0ebda501bf87bd697258b85ecf7a1ca0/Details">Acesse
+                    <h3>Modos de gozo na dor de existir: um estudo psicanalítico sobre A falecida de Nelson Rodrigues.
+                    </h3>
+                    <a href="http://bdtd.ibict.br/vufind/Record/PUC_SP-1_0ebda501bf87bd697258b85ecf7a1ca0/Details">Acesse
 						aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Inibição Melancólica. Um estudo psicanalítico sobre a dor de existir.</h3>
-					<a href="http://www.zagodoni.com.br/pesquisar_autor.asp?autor=Fabiana%20Carvalho%20Ratti">Acesse
+                    <h3>Inibição Melancólica. Um estudo psicanalítico sobre a dor de existir.</h3>
+                    <a href="http://www.zagodoni.com.br/pesquisar_autor.asp?autor=Fabiana%20Carvalho%20Ratti">Acesse
 						aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Debate Violência Obstétrica OAB Jabaquara.</h3>
-					<a href="http://www.oabjabaquara.org.br/evento/debate-violencia-obstetrica/">Acesse aqui</a>
+                    <h3>Debate Violência Obstétrica OAB Jabaquara.</h3>
+                    <a href="http://www.oabjabaquara.org.br/evento/debate-violencia-obstetrica/">Acesse aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>9º Encontro Mulheres com Direito – parentalidades.</h3>
-					<a
-						href="https://www.sympla.com.br/9-encontro-mulheres-com-direito-parentalidade-e-carreira__405496">Acesse
+                    <h3>9º Encontro Mulheres com Direito – parentalidades.</h3>
+                    <a href="https://www.sympla.com.br/9-encontro-mulheres-com-direito-parentalidade-e-carreira__405496">Acesse
 						aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Organização do Ciclo de Palestras Perversão e Violência no Tomie Ohtake.</h3>
-					<a
-						href="https://www.allereditora.com.br/ciclo-de-palestras-aborda-questao-da-perversao-e-da-violencia/">Acesse
+                    <h3>Organização do Ciclo de Palestras Perversão e Violência no Tomie Ohtake.</h3>
+                    <a href="https://www.allereditora.com.br/ciclo-de-palestras-aborda-questao-da-perversao-e-da-violencia/">Acesse
 						aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Discussão sobre troca de Vídeos íntimos.</h3>
-					<a
-						href="https://radiocomunidadefm.com/noticia/como-descobri-um-grupo-de-famosos-que-troca-videos-intimos-no-whatsapp">Acesse
+                    <h3>Discussão sobre troca de Vídeos íntimos.</h3>
+                    <a href="https://radiocomunidadefm.com/noticia/como-descobri-um-grupo-de-famosos-que-troca-videos-intimos-no-whatsapp">Acesse
 						aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Entrevista: geração ansiedade.</h3>
-					<a href="https://www.vice.com/pt_br/article/9kmanv/por-que-nossa-geracao-e-tao-fodida-da-cabeca">Acesse
+                    <h3>Entrevista: geração ansiedade.</h3>
+                    <a href="https://www.vice.com/pt_br/article/9kmanv/por-que-nossa-geracao-e-tao-fodida-da-cabeca">Acesse
 						aqui</a>
 
-					<hr class="major" />
+                    <hr class="major" />
 
-					<h3>Blog Artes e Debates.</h3>
-					<a href="http://artesedebates.blogspot.com/">Acesse aqui</a>
+                    <h3>Blog Artes e Debates.</h3>
+                    <a href="http://artesedebates.blogspot.com/">Acesse aqui</a>
 
-			</div>
-		</div>
+            </div>
+        </div>
 
-		<div id="sidebar">
-			<div class="inner">
+        <div id="sidebar">
+            <div class="inner">
 
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="quemSomos.html">Quem Somos</a></li>
-						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
-						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
-						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
-						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
-						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
-						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
-						<li><a href="painelCultural.html">Painel Cultural</a></li>
-						<li><a href="biblioteca.html">Biblioteca</a></li>
-						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
-						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
-						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
-					</ul>
-				</nav>
+                <nav id="menu">
+                    <header class="major">
+                        <h2>Menu</h2>
+                    </header>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="quemSomos.html">Quem Somos</a></li>
+                        <li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
+                        <li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
+                        <li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+                        <li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
+                        <li><a href="espacoEstudo.html">Espaço de estudo</a></li>
+                        <li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
+                        <li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
+                        <li><a href="painelCultural.html">Painel Cultural</a></li>
+                        <li><a href="biblioteca.html">Biblioteca</a></li>
+                        <li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
+                        <li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
+                        <li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+                    </ul>
+                </nav>
 
-				<section>
-					<header class="major">
-						<h2>Contato</h2>
-					</header>
-					<ul class="contact">
-						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
-							<li class="icon solid fa-phone">(11) 99955-8857</li>
-							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933 <br />conjunto 75 -
-								Pinheiros<br />
-								São Paulo, CEP: 05414-012</li>
-						</ul>
-					</ul>
-				</section>
+                <section>
+                    <header class="major">
+                        <h2>Contato</h2>
+                    </header>
+                    <ul class="contact">
+                        <ul class="contact">
+                            <li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
+                            <li class="icon solid fa-phone">(11) 99955-8857</li>
+                            <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933 <br />conjunto 75 - Pinheiros
+                                <br /> São Paulo, CEP: 05414-012</li>
+                        </ul>
+                    </ul>
+                </section>
 
-				<footer id="footer">
-					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
-				</footer>
+                <footer id="footer">
+                    <p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
+                </footer>
 
-			</div>
-		</div>
+            </div>
+        </div>
 
-	</div>
+    </div>
 
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
